--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="fact-box">
+                    <h2 class="fact-heading">Purrfect Cat Fact</h2>
                     <div class="spinner-border text-primary spinner-container" role="status" id="factSpinner">
                         <span class="sr-only"></span>
                     </div>
