--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+
     <title>Cat Facts by Jono</title>
+    <meta property="og:image" content="social-preview-image.jpg">
+    <meta property="og:image:width" content="1200"> <!-- Width of the image in pixels -->
+    <meta property="og:image:height" content="630"> <!-- Height of the image in pixels -->
+
+    <meta property="og:title" content="Cat facts by Jono">
+    <meta property="og:description" content="A dose of ">
+    <meta property="og:url" content="https://jcopperman.github.io/cat-fact/">
+    <meta property="og:type" content="website">
+
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         body {
