Added favicon and meta info

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image:height" content="630"> <!-- Height of the image in pixels -->
 
     <meta property="og:title" content="Cat facts by Jono">
-    <meta property="og:description" content="A dose of ">
+    <meta property="og:description" content="Wanna hear a bad cat dad joke? Just kitten!">
     <meta property="og:url" content="https://jcopperman.github.io/cat-fact/">
     <meta property="og:type" content="website">
 
