--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <title>Cat Facts by Jono</title>
-    <meta property="og:image" content="hd-cat-transformed">
+    <meta property="og:image" content="hd-cat-transformed.jpg">
     <meta property="og:image:width" content="1200"> <!-- Width of the image in pixels -->
     <meta property="og:image:height" content="630"> <!-- Height of the image in pixels -->
     <meta property="og:title" content="Cat facts by Jono">
