--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:image:width" content="1200"> <!-- Width of the image in pixels -->
     <meta property="og:image:height" content="630"> <!-- Height of the image in pixels -->
     <meta property="og:title" content="Cat facts by Jono">
-    <meta property="og:description" content="Wanna hear a bad cat dad joke? Just kitten!">
+    <meta property="og:description" content="Wanna hear a bad cat dad joke? Just kitten! Here are cat facts instead, just for you!">
     <meta property="og:url" content="https://jcopperman.github.io/cat-fact/">
     <meta property="og:type" content="website">
 
