--- a/dadjoke/index.html
+++ b/dadjoke/index.html
@@ -39,7 +39,7 @@
 
                 // Update the content and hide the spinner
                 document.getElementById('dadJoke').textContent = joke;
-                hideSpinner('jokeSpinner');
+                //hideSpinner('jokeSpinner');
             } catch (error) {
                 console.error('Error:', error);
             }
