renamed api key

--- a/dadjoke/index.html
+++ b/dadjoke/index.html
@@ -27,7 +27,7 @@
             const options = {
                 method: 'GET',
                 headers: {
-                    'X-RapidAPI-Key': API_KEY,
+                    'X-RapidAPI-Key': apiKey,
                     'X-RapidAPI-Host': 'dad-jokes.p.rapidapi.com'
                 }
             };
